<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25_4_c"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideline" />

    <TextView
        android:id="@+id/cloudsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/few_clouds"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tempTextView" />

    <TextView
        android:id="@+id/windTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/cloudsTextView" />

    <TextView
        android:id="@+id/windSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_7_2_m_s"
        app:layout_constraintBottom_toBottomOf="@+id/windTextView"
        app:layout_constraintStart_toEndOf="@+id/windTextView"
        app:layout_constraintTop_toTopOf="@+id/windTextView" />

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/windTextView" />

    <TextView
        android:id="@+id/pressureAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="@string/_1016_0_hpa"
        app:layout_constraintBottom_toBottomOf="@+id/pressureTextView"
        app:layout_constraintStart_toEndOf="@+id/pressureTextView"
        app:layout_constraintTop_toTopOf="@+id/pressureTextView" />

    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/pressureTextView" />

    <TextView
        android:id="@+id/humidityAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_3990"
        app:layout_constraintBottom_toBottomOf="@+id/humidityTextView"
        app:layout_constraintStart_toEndOf="@+id/humidityTextView"
        app:layout_constraintTop_toTopOf="@+id/humidityTextView" />

    <TextView
        android:id="@+id/sunriseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunrise"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/humidityTextView" />

    <TextView
        android:id="@+id/sunriseTimeStampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="@string/_12_14_pm"
        app:layout_constraintBottom_toBottomOf="@+id/sunriseTextView"
        app:layout_constraintStart_toEndOf="@+id/sunriseTextView"
        app:layout_constraintTop_toBottomOf="@+id/humidityTextView" />

    <TextView
        android:id="@+id/sunsetTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunset"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/sunriseTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sunsetTimestampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="@string/_1_41_am"
        app:layout_constraintBottom_toBottomOf="@+id/sunsetTextView"
        app:layout_constraintStart_toEndOf="@+id/sunsetTextView"
        app:layout_constraintTop_toTopOf="@+id/sunsetTextView" />

    <ImageView
        android:id="@+id/weatherImageView"
        android:contentDescription="@string/weather_type_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideline"
        app:srcCompat="@drawable/icons8_clouds_100" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_update"
        app:layout_constraintBottom_toBottomOf="@+id/sunriseTimeStampTextView"
        app:layout_constraintEnd_toEndOf="@+id/weatherImageView"
        app:layout_constraintStart_toStartOf="@+id/weatherImageView"
        app:layout_constraintTop_toTopOf="@+id/sunriseTimeStampTextView" />

    <TextView
        android:id="@+id/lastUpdateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/_8_39_pm"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>